cli/tests/snapshots/arguments__send_missing_subvol.snap
---
source: cli/tests/arguments.rs
expression: "parse_err(&[\"btrfs\", \"send\"])"
---
error: the following required arguments were not provided:
  <SUBVOLUMES>...
