cli/tests/snapshots/arguments__subvolume_create.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"subvolume\", \"create\", \"/mnt/subvol\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Subvolume(
        SubvolumeCommand {
            subcommand: Create(
                SubvolumeCreateCommand {
                    qgroups: [],
                    parents: false,
                    paths: [
                        "/mnt/subvol",
                    ],
                },
            ),
        },
    ),
}
