cli/tests/snapshots/arguments__subvolume_create_missing_path.snap
---
source: cli/tests/arguments.rs
expression: "parse_err(&[\"btrfs\", \"subvolume\", \"create\"])"
---
error: the following required arguments were not provided:
  <PATHS>...
