cli/tests/snapshots/arguments__subvolume_create_multiple_qgroups.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"subvolume\", \"create\", \"-i\", \"0/100\", \"-i\", \"1/0\",\n\"/mnt/subvol\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Subvolume(
        SubvolumeCommand {
            subcommand: Create(
                SubvolumeCreateCommand {
                    qgroups: [
                        "0/100",
                        "1/0",
                    ],
                    parents: false,
                    paths: [
                        "/mnt/subvol",
                    ],
                },
            ),
        },
    ),
}
