cli/tests/snapshots/arguments__subvolume_create_parents.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"subvolume\", \"create\", \"-p\", \"/mnt/a/b/subvol\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Subvolume(
        SubvolumeCommand {
            subcommand: Create(
                SubvolumeCreateCommand {
                    qgroups: [],
                    parents: true,
                    paths: [
                        "/mnt/a/b/subvol",
                    ],
                },
            ),
        },
    ),
}
