cli/tests/snapshots/arguments__subvolume_create_parents_and_qgroup.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"subvolume\", \"create\", \"-p\", \"-i\", \"0/100\", \"/mnt/a/subvol\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Subvolume(
        SubvolumeCommand {
            subcommand: Create(
                SubvolumeCreateCommand {
                    qgroups: [
                        "0/100",
                    ],
                    parents: true,
                    paths: [
                        "/mnt/a/subvol",
                    ],
                },
            ),
        },
    ),
}
