cli/tests/snapshots/arguments__subvolume_create_qgroup.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"subvolume\", \"create\", \"-i\", \"0/100\", \"/mnt/subvol\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Subvolume(
        SubvolumeCommand {
            subcommand: Create(
                SubvolumeCreateCommand {
                    qgroups: [
                        "0/100",
                    ],
                    parents: false,
                    paths: [
                        "/mnt/subvol",
                    ],
                },
            ),
        },
    ),
}
